--- a/index.qmd
+++ b/index.qmd
@@ -27,8 +27,8 @@ format:
 <p><a href="https://www.github.com/thomasjpfan" class="icon"><i class="fa-brands fa-github" aria-label="github" target="_blank" rel="noopener"></i></a> <a href="https://www.&#64;twitter.com/thomasjpfan" class="icon"><i class="fa-brands fa-twitter" aria-label="twitter" target="_blank" rel="noopener"></i> </a> <a href="https://www.github.com/thomasjpfan" class="social-media" target="_blank" rel="noopener"> &#64;thomasjpfan</a></p>
 <p><a href="https://fosstodon.org/@thomasjpfan" class="icon"><i class="fa-brands fa-mastodon" aria-label="mastodon" target="_blank" rel="noopener"></i> &#64;thomasjpfan&#64;fosstodon.org</a></p>
 <p><a href="https://www.github.com/thomasjpfan/slides-template-quarto" class="talk-link">github.com/thomasjpfan/slides-template-quarto</a></p>
+![](images/favicon_org.png){.absolute right=0 width=300 top=110}
 </section>
-![](images/favicon_org.png){.absolute bottom=200 right=0 width="300"}
 
 # In the morning ☀️
 
