--- a/index.qmd
+++ b/index.qmd
@@ -187,7 +187,7 @@ Appears second
 
 ## Columns Long
 
-:::: {.columns}
+:::: {.columns .g-middle}
 ::: {.column}
 ### This is a title
 - Here is an item
@@ -196,12 +196,12 @@ Appears second
 - Here is an item
 - Here is an item
 - Here is an item
-- Here is an item
-- Here is an item
+- Another item Another item Another item Another item Another item
+
 :::
 
-::: {.column}
+::: {.column .fragment .g-center}
 ### Another title
-- Another item
+- Another item Another item Another item Another item Another item
 :::
 ::::
